# Lembra

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/: FUNDING.yml
src/: history.html  main.html  onboarding.html  overlay.html  settings.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src/css/: history.css  nav.css  onboarding.css  overlay.css  settings.css  theme.css  time-picker.css  titlebar.css
src/js/: history.js  main.js  nav.js  onboarding.js  overlay.js  settings.js  theme.js  time-picker.js  titlebar.js
